# moonclaude

./: .gitignore  README.md  index.html  out.txt  out2.txt  pyproject.toml  style.css
docs/: index.html
moonclaude/: __init__.py  branding.py  commands.py  config.py  main.py  memory.py  models.py  proxy_logging.py  shells.py  ui.py  updates.py  wizard.py
tmp/: test_logging.py  test_spawn.py
