[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moonclaude"
version = "2.1.4"
description = "Moon for Claude: run Claude Code on external LLMs via LiteLLM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["moonclaude", "claude", "llm", "openrouter", "litellm", "cli"]
dependencies = [
    "pyyaml>=6.0",
    "litellm[proxy]>=1.40.0",
    "rich>=13.0.0",
]

[project.scripts]
moonclaude = "moonclaude.main:main"
moon = "moonclaude.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["moonclaude*"]
